--- a/inst/www/shinygadgets.css
+++ b/inst/www/shinygadgets.css
@@ -14,15 +14,19 @@
   border-top: 1px solid #dddddd;
 }
 ul.tabstrip {
+  display: -webkit-box;
   display: flex;
   list-style: none;
   width: 100%;
   height: 100%;
   margin: 0;
+  padding: 0;
   align-items: center;
+  -webkit-box-align: center;
   justify-content: center;
 }
 ul.tabstrip>li {
+  -webkit-box-flex: 1;
   flex: 1;
 }
 ul.tabstrip>li.active>a {
