--- a/inst/www/shinygadgets.css
+++ b/inst/www/shinygadgets.css
@@ -1,11 +1,4 @@
-.tabstrip-content-container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 51px;
-}
-.tabstrip-container {
+.gadget-tabs-container {
   position: absolute;
   left: 0;
   right: 0;
@@ -13,7 +6,14 @@
   height: 51px;
   border-top: 1px solid #dddddd;
 }
-ul.tabstrip {
+.gadget-tabs-content-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 51px;
+}
+ul.gadget-tabs {
   display: -webkit-box;
   display: flex;
   list-style: none;
@@ -25,35 +25,37 @@ ul.tabstrip {
   -webkit-box-align: center;
   justify-content: center;
 }
-ul.tabstrip>li {
+ul.gadget-tabs>li {
   -webkit-box-flex: 1;
   flex: 1;
 }
-ul.tabstrip>li.active>a {
+ul.gadget-tabs>li.active>a {
   color: #428bca;
 }
-ul.tabstrip>li>a {
+ul.gadget-tabs>li>a {
   display: block;
   text-align: center;
   color: #929292;
   text-decoration: none;
   font-size: 12px;
 }
-ul.tabstrip>li>a>i {
+ul.gadget-tabs>li>a>i {
   display: block;
   margin-left: auto;
   margin-right: auto;
   font-size: 24px;
 }
-.greedy {
+.gadget-scroll {
   width: 100%;
   height: 100%;
   overflow: auto;
 }
-.padded {
+.gadget-padded {
+  width: 100%;
+  height: 100%;
   padding: 10px;
 }
-.titlestrip {
+.gadget-title {
   background-color: #f2f2f2;
   position: absolute;
   top: 0;
@@ -63,13 +65,13 @@ ul.tabstrip>li>a>i {
   border-bottom: 1px solid #ddd;
   padding: 0 8px;
 }
-.titlestrip button.btn {
+.gadget-title button.btn {
   position: relative;
   height: 30px;
   margin-top: 7px;
   z-index: 10;
 }
-.titlestrip h1 {
+.gadget-title h1 {
   position: absolute;
   top: 0;
   left: 0;
@@ -81,16 +83,16 @@ ul.tabstrip>li>a>i {
   margin: 0;
   z-index: 0;
 }
-.titlestrip-body {
+.gadget-title-body {
   position: absolute;
   top: 45px;
   left: 0;
   right: 0;
   bottom: 0;
 }
-.tabstrip-content-container .tab-content, .tabstrip-content-container .tab-content .tab-pane {
+.gadget-tabs-content-container .tab-content, .gadget-tabs-content-container .tab-content .tab-pane {
   height: 100%;
 }
-.tabstrip {
+.gadget-tabs {
   background-color: #f2f2f2;
 }
