--- a/inst/www/shinygadgets.css
+++ b/inst/www/shinygadgets.css
@@ -1,100 +1,1 @@
-.gadget-container {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-}
-.gadget-tabs-container {
-  height: 51px;
-  border-top: 1px solid #dddddd;
-}
-.gadget-tabs-content-container {
-  position: relative;
-  -webkit-box-flex: 1;
-  flex: 1;
-}
-ul.gadget-tabs {
-  display: -webkit-box;
-  display: flex;
-  list-style: none;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-  -webkit-box-align: center;
-  justify-content: center;
-}
-ul.gadget-tabs>li {
-  -webkit-box-flex: 1;
-  flex: 1;
-}
-ul.gadget-tabs>li.active>a {
-  color: #428bca;
-}
-ul.gadget-tabs>li>a {
-  display: block;
-  text-align: center;
-  color: #929292;
-  text-decoration: none;
-  font-size: 12px;
-}
-ul.gadget-tabs>li>a>i {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 24px;
-}
-.gadget-scroll {
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-.gadget-padded {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-}
-.gadget-title {
-  position: relative;
-  background-color: #f2f2f2;
-  height: 45px;
-  border-bottom: 1px solid #ddd;
-  padding: 0 8px;
-}
-.gadget-title button.btn {
-  position: relative;
-  height: 30px;
-  margin-top: 7px;
-  z-index: 10;
-}
-.gadget-title h1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  font-size: 17px;
-  text-align: center;
-  line-height: 44px;
-  margin: 0;
-  z-index: 0;
-}
-.gadget-tabs-content-container .tab-content, .gadget-tabs-content-container .tab-content .tab-pane {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.gadget-tabs {
-  background-color: #f2f2f2;
-}
-.gadget-content {
-  position: relative;
-  -webkit-box-flex: 1;
-  flex: 1;
-  height: 100%;
-}
+.wh-fill{width:100%;height:100%}.abs-fill{position:absolute;top:0;right:0;bottom:0;left:0}.gadget-tabs-container{height:51px;border-top:1px solid #ddd}.gadget-tabs-container ul.gadget-tabs{width:100%;height:100%;list-style:none;display:-webkit-flex;display:-ms-flexbox;display:flex;background-color:#f2f2f2;margin:0;padding:0;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center}.gadget-tabs-container ul.gadget-tabs>li{-webkit-flex:1;-ms-flex:1;flex:1}.gadget-tabs-container ul.gadget-tabs>li>a{display:block;text-align:center;color:#777;text-decoration:none;font-size:12px}.gadget-tabs-container ul.gadget-tabs>li>a>i{display:block;margin:auto;font-size:24px}.gadget-tabs-container ul.gadget-tabs>li.active>a{color:#337ab7}.gadget-tabs-content-container{position:relative;-webkit-flex:1;-ms-flex:1;flex:1}.gadget-tabs-content-container .tab-content,.gadget-tabs-content-container .tab-content .tab-pane{position:absolute;top:0;right:0;bottom:0;left:0}.gadget-title{position:relative;background-color:#f2f2f2;height:45px;border-bottom:1px solid #ddd;padding:0}.gadget-title button.btn{position:relative;height:31px;margin:7px 7px 0;z-index:10}.gadget-title h1{position:absolute;top:0;right:0;bottom:0;left:0;font-size:17px;text-align:center;line-height:44px;margin:0;z-index:0}.gadget-block-button{background-color:#f2f2f2;border-top:1px solid #ddd;padding:0 6px;display:-webkit-flex;display:-ms-flexbox;display:flex}.gadget-block-button .btn{display:block;-webkit-flex:1;-ms-flex:1;flex:1;margin:6px 6px}html.fill-page,html.fill-page body{width:100%;height:100%}.gadget-container{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:100%;height:100%}.gadget-content{position:relative;-webkit-flex:1;-ms-flex:1;flex:1;height:100%}.gadget-scroll{width:100%;height:100%;overflow:auto}.gadget-padded{width:100%;height:100%;padding:10px}
