Button block docs

--- a/less/block-button.less
+++ b/less/block-button.less
@@ -2,7 +2,6 @@
 
 .gadget-block-button {
 	background-color: @gadget-chrome-bg;
-	border-top: @gadget-border;
 	padding: 0 6px;
 	display: flex;
 	.btn {
@@ -10,4 +9,12 @@
 		flex: 1;
 		margin: 6px 6px;
 	}
+}
+
+.gadget-block-button-top {
+	border-top: @gadget-border;
+}
+
+.gadget-block-button-bottom {
+	border-bottom: @gadget-border;
 }
