flex:none on all non-flex children of gadgetPage

--- a/less/block-button.less
+++ b/less/block-button.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 
 .gadget-block-button {
+	flex: none;
 	background-color: @gadget-chrome-bg;
 	padding: 0 6px;
 	display: flex;
