--- a/less/gadgets.less
+++ b/less/gadgets.less
@@ -15,12 +15,15 @@
 .gadget-content {
 	position: relative;
 	flex: 1;
-	height: 100%;
 }
 .gadget-content-inner {
   .wh-fill;
 }
 .gadget-scroll {
-	.wh-fill;
+	display: flex;
+	position: relative;
+	flex: 1;
+	width: 100%;
+	height: 100%;
 	overflow: auto;
 }
