Change miniContentPanel padding to 15px
This looks slightly worse IMHO, but makes it possible to use fluidRow
inside a miniContentPanel without causing a spurious horizontal
scrollbar to appear.

--- a/less/titlebar.less
+++ b/less/titlebar.less
@@ -8,7 +8,7 @@
 	button.btn {
 		position: relative;
 		height: @gadget-title-height - (@gadget-title-padding * 2);
-		margin: @gadget-title-padding @gadget-title-padding 0;
+		margin: @gadget-title-padding 10px 0;
 		z-index: 10;
 	}
 	h1 {
