--- a/less/tabstrip.less
+++ b/less/tabstrip.less
@@ -37,4 +37,9 @@
 	.tab-content, .tab-content .tab-pane {
 		.abs-fill;
 	}
+  .gadget-tabs-content-inner {
+    .abs-fill;
+    display: flex;
+    flex-direction: column;
+  }
 }
